--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     .heading {
         color: darkblue;
         font-family: "Century Gothic", cursive; 
-        font-size: 13px; 
+        font-size: 20px; 
         line-height: 10px; 
         font-weight: normal;
         text-align: center; 
@@ -16,7 +16,7 @@
 
     .about {
         text-align: center;
-        font-size: 13px;
+        font-size: 15px;
         margin-left: 10%;
         margin-right: 10%;
     }
@@ -43,7 +43,8 @@
         flex-wrap: wrap;
         justify-content: center;
         margin-top: 40px;
-        font-family:Arial, Helvetica, sans-serif
+        font-family:Arial, Helvetica, sans-serif;
+	zoom: 150%;
     }
 
     .instructions {
